@@ -6,10 +6,7 @@ and fixes from both ChilliSpot 1.1 snapshots and contributions from
 PicoPoint, Coova, and others in the community. For more information on
 Coova-Chilli, see:
 
-http://coova.org/wiki/index.php/CoovaChilli
-
-For help building this package:
-http://coova.org/wiki/index.php/BuildingCoovaChilli
+http://www.coova.org/
 
 To get started from SVN:
 
