@@ -1,8 +1,6 @@
 #
 #	ChilliSpot (and CoovaChilli) captive portal
-#	http://coova.org/wiki/index.php/CoovaChilli
-#
-#	$Id: dictionary.chillispot,v 1.3 2007/09/24 16:16:22 dwbird Exp $
+#	http://www.coova.org/CoovaChilli
 #
 
 VENDOR          ChilliSpot                   14559
