@@ -1,7 +1,7 @@
 /*
  * Chilli sessions
  * Copyright (C) 2004, 2005 Mondru AB.
- * Copyright (c) 2006-2007 David Bird <david@cova.com>
+ * Copyright (c) 2006-2009 Coova Technologies, LLC. <support@coova.com>
  *
  * The contents of this file may be used under the terms of the GNU
  * General Public License Version 2, provided that the above copyright
@@ -14,11 +14,16 @@
 #include "dhcp.h"
 #include "chilli.h"
 
-int session_redir_json_fmt(bstring json, char *userurl, char *redirurl, uint8_t *hismac) {
+int session_redir_json_fmt(bstring json, char *userurl, char *redirurl, 
+			   bstring logouturl, uint8_t *hismac) {
   bcatcstr(json,",\"redir\":{\"originalURL\":\"");
   bcatcstr(json, userurl?userurl:"");
   bcatcstr(json,"\",\"redirectionURL\":\"");
   bcatcstr(json, redirurl?redirurl:"");
+  if (logouturl) {
+    bcatcstr(json,"\",\"logoutURL\":\"");
+    bconcat(json, logouturl);
+  }
   bcatcstr(json,"\",\"macAddress\":\"");
   if (hismac) {
     char mac[REDIR_MACSTRLEN+2];
