@@ -95,6 +95,7 @@ int session_json_fmt(struct session_state *state,
 		     struct session_params *params,
 		     bstring json, int init);
 
-int session_redir_json_fmt(bstring json, char *userurl, char *redirurl, uint8_t *hismac);
+int session_redir_json_fmt(bstring json, char *userurl, char *redirurl, 
+			   bstring logouturl, uint8_t *hismac);
 
 #endif
